--- a/frontend/productos.html
+++ b/frontend/productos.html
@@ -28,10 +28,9 @@
         </div>
     </div>
 
-
 <script>
     document.addEventListener('DOMContentLoaded', function () {
-        fetch('http://localhost:3000/api/productos')
+        fetch('/cgi-bin/get_productos.cgi')
             .then(response => response.json())
             .then(data => {
                 const productosGaleria = document.querySelector('.productos-galeria');
@@ -56,4 +55,3 @@
 </script>
 </body>
 </html>
-
