--- a/frontend/registro_mascota.html
+++ b/frontend/registro_mascota.html
@@ -38,7 +38,7 @@
             <button type="submit" id="registerMascotaSubmit">Registrar Mascota</button>
         </form>
     </div>
-    <script src="registro_mascota.js"></script>
+    <script src="js/registro_mascota.js"></script> <!-- Asegúrate de que la ruta del script es correcta -->
 </body>
 </html>
 
