style version2 y frontend version3

--- a/frontend/adopcion.html
+++ b/frontend/adopcion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nosotros</title>
+    <title>Adopción de Mascotas</title>
     <link rel="stylesheet" href="css/style_nuevo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -63,41 +63,67 @@
         </div>
     </nav>
 
-    <!-- Contenido de Sobre Nosotros -->
+    <!-- Sección de Adopción -->
     <div class="container mt-5">
-        <div class="text-center mb-4">
-            <img src="images/sobre-nosotros.jpg" class="img-fluid rounded" alt="Sobre Nosotros">
-        </div>
-        <h1 class="text-center">Sobre Nosotros</h1>
-        <p class="lead text-center">
-            Somos una empresa dedicada a servir entusiasmadamente a las personas que ven a sus mascotas como parte de su familia.
-            Nuestro objetivo es brindar un servicio exclusivo con el confort y amor que nuestros queridos amigos de cuatro patas merecen.
-        </p>
-        <hr>
-        <h2>Misión</h2>
-        <p>
-            Nuestra misión es mejorar la calidad de vida de las mascotas y sus dueños proporcionando productos y servicios de alta calidad.
-            Nos esforzamos por crear una comunidad donde tanto las mascotas como sus dueños puedan encontrar todo lo que necesitan.
-        </p>
-        <h2>Visión</h2>
-        <p>
-            Aspiramos a ser la empresa líder en el cuidado integral de mascotas, reconocida por nuestra dedicación, innovación y compromiso
-            con el bienestar animal. Queremos ser la primera opción para todas las necesidades de las mascotas.
-        </p>
-        <h2>Valores</h2>
-        <ul>
-            <li><strong>Compromiso:</strong> Dedicados a brindar lo mejor para nuestras mascotas.</li>
-            <li><strong>Innovación:</strong> Siempre buscando nuevas formas de mejorar la vida de las mascotas.</li>
-            <li><strong>Calidad:</strong> Productos y servicios de la más alta calidad.</li>
-            <li><strong>Comunidad:</strong> Fomentar una comunidad unida por el amor a las mascotas.</li>
-        </ul>
-        <hr>
-        <div class="text-center">
-            <a href="index.html" class="btn btn-primary">Volver al Inicio</a>
+        <h2 class="text-center">Historias de Adopción</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="images/mascota1.jpg" class="card-img-top" alt="Mascota 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Historia de Fido</h5>
+                        <p class="card-text">Fido fue rescatado y encontrado un hogar lleno de amor. Disfruta de largas caminatas y ha hecho nuevos amigos.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="images/mascota2.jpg" class="card-img-top" alt="Mascota 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Historia de Luna</h5>
+                        <p class="card-text">Luna fue adoptada y ahora vive con una familia que la adora. Le encanta jugar y correr por el parque.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="images/mascota3.jpg" class="card-img-top" alt="Mascota 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Historia de Max</h5>
+                        <p class="card-text">Max fue rescatado de un refugio y ahora disfruta de una vida llena de aventuras con su nueva familia.</p>
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="images/mascota4.jpg" class="card-img-top" alt="Mascota 4">
+                    <div class="card-body">
+                        <h5 class="card-title">Historia de Bella</h5>
+                        <p class="card-text">Bella es una gatita juguetona que fue encontrada en las calles. Ahora vive en una casa donde recibe todo el cariño que merece.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="images/mascota5.jpg" class="card-img-top" alt="Mascota 5">
+                    <div class="card-body">
+                        <h5 class="card-title">Historia de Rocky</h5>
+                        <p class="card-text">Rocky fue rescatado de un refugio y ahora disfruta de sus días jugando en el jardín de su nuevo hogar.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="images/mascota6.jpg" class="card-img-top" alt="Mascota 6">
+                    <div class="card-body">
+                        <h5 class="card-title">Historia de Daisy</h5>
+                        <p class="card-text">Daisy fue encontrada en un parque y ahora vive felizmente con una familia que la adora. Es muy cariñosa y le encanta jugar con los niños.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3 mt-4">
         <div class="container">
             <div class="row">
