--- a/frontend/css/index.html
+++ b/frontend/css/index.html
@@ -6,7 +6,6 @@
     <title>🎄✨ Pets ✨🎄</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <script src="js/login.js"></script>
     <style>
         body {
@@ -77,9 +76,11 @@
 
 </head>
 <body>
-       <header>
-        <img src="images/navidad-fondo.jpg" alt="Zoom Logo" class="logo">
-    </header> 
+    
+    <header>
+        <img src="images/logo2.jpg" alt="Zoom Logo" class="logo">
+    </header>
+
     <div class="menu-icon" id="menuToggle">
         <i class="fas fa-bars"></i>
     </div>
@@ -203,40 +204,7 @@
             </div>
         </div>
     </div>
- 
-    <div class="container mt-5">
-        <h2 class="text-center">Historias de Adopción</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <img src="images/mascota1.jpg" class="card-img-top" alt="Mascota 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Historia de Fido</h5>
-                        <p class="card-text">Fido fue rescatado y encontrado un hogar lleno de amor. Disfruta de largas caminatas y ha hecho nuevos amigos.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <img src="images/mascota2.jpg" class="card-img-top" alt="Mascota 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Historia de Luna</h5>
-                        <p class="card-text">Luna fue adoptada y ahora vive con una familia que la adora. Le encanta jugar y correr por el parque.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <img src="images/mascota3.jpg" class="card-img-top" alt="Mascota 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Historia de Max</h5>
-                        <p class="card-text">Max fue rescatado de un refugio y ahora disfruta de una vida llena de aventuras con su nueva familia.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    
 <div class="modal" id="registerModal">
     <div class="modal-content">
         <span class="close" id="closeRegister">&times;</span>
